Modified Register, Contacts Retrieval, edit user view profile